by default use the last buffer that navigated to the current buffer.

** Eshell

---
*** Expansion of history event designators is disabled by default.
To restore the old behavior, use

    (add-hook 'eshell-expand-input-functions
              #'eshell-expand-history-references)

*** The function 'shell-uniquify-list' has been renamed from
'eshell-uniqify-list'.

** Pcomplete
*** The function 'pcomplete-uniquify-list' has been renamed from
'pcomplete-uniqify-list'.

** Tramp

+++
*** New connection method "owncloud", which allows to access OwnCloud
or NextCloud hosted files and directories.

---
** The options.el library has been removed.
It was obsolete since Emacs 22.1, replaced by customize.


* New Modes and Packages in Emacs 27.1

+++
** Emacs can now visit files in archives as if they were directories.
This feature uses Tramp and works only on systems which support GVFS,
i.e. GNU/Linux, roughly spoken.  See the chapter "(tramp) Archive file
names" in the Tramp manual for full documentation of these facilities.


* Incompatible Lisp Changes in Emacs 27.1

** The FILENAME argument to 'file-name-base' is now mandatory and no
longer defaults to 'buffer-file-name'.

---
** The function 'eldoc-message' now accepts a single argument.
Programs that called it with multiple arguments before should pass
them through 'format' first.  Even that is discouraged: for ElDoc
support, you should set 'eldoc-documentation-function' instead of
calling 'eldoc-message' directly.

** Old-style backquotes now generate an error.  They have been
generating warnings for a decade.  To interpret old-style backquotes
as new-style, bind the new variable 'force-new-style-backquotes' to t.

** Defining a Common Lisp structure using 'cl-defstruct' or
'cl-struct-define' whose name clashes with a builtin type (e.g.,
'integer' or 'hash-table') now signals an error.

** When formatting a floating-point number as an octal or hexadecimal